fix jumping on right click (context menu) #399

--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -79,6 +79,7 @@ body.terminal {
 }
 .terminal > div {
     overflow: hidden;
+    height: 100%;
 }
 .terminal > .resizer, .terminal > .font .resizer {
     position: absolute;
